modify sklearn model ensemble trials

--- a/Simple_ML_Models.ipynb
+++ b/Simple_ML_Models.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcotg5ZuBeEpNoOt4LUt2C",
+      "authorship_tag": "ABX9TyPBGOTB4TDOYX5TQmmBbrmg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3995,6 +3995,8 @@
         "Ideas:\n",
         "\n",
         "1. Have 2 different classifiers, the first one classifies everything, then whatever it classifies wrongly or un-confidently (based on a certain probability threshold value) gets passed on to the second classifier. The second classifier is only fitted on these \"difficult\" cases, to try to classify them correctly.\n",
+        "2. Use all classifiers that predict using probabilities, then classify based on highest average probability across all classifiers\n",
+        "3. Use all classifiers that predict using probabilities, then use a second model to output the final class based on the concatenated probabilities\n",
         "\n"
       ],
       "metadata": {
@@ -4002,15 +4004,31 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#### idea 1"
+      ],
+      "metadata": {
+        "id": "IfWDpSSU_NTW"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
         "\n",
-        "def get_repred_ind(clf, X, y, threshold=0.6):\n",
+        "def get_repred_ind(clf, X, y=None, threshold=0.55):  #, threshold2=0.6):\n",
         "    pred_probs = clf.predict_proba(X)\n",
-        "    threshold_col = np.expand_dims(np.array([threshold]*pred_probs.shape[0]), axis=1)\n",
-        "    pred_probs_threshed = np.append(pred_probs, threshold_col, axis=1)\n",
-        "    repredict_ind = np.where(np.argmax(pred_probs_threshed, axis=1) != y)[0]\n",
+        "    # if y is not None:\n",
+        "    #     threshold_col = np.expand_dims(np.array([threshold]*pred_probs.shape[0]), axis=1)\n",
+        "    #     pred_probs_threshed = np.append(pred_probs, threshold_col, axis=1)\n",
+        "    #     repredict_ind = np.where(np.argmax(pred_probs_threshed, axis=1) != y)[0]\n",
+        "    # else:\n",
+        "    #     repredict_ind = np.where(np.max(pred_probs, axis=1) < threshold)[0]\n",
+        "    # ind1 = np.where(np.max(pred_probs, axis=1) < threshold1)[0]\n",
+        "    # ind2 = np.where(np.max(pred_probs, axis=1) - np.min(pred_probs, axis=1) < threshold2)[0]\n",
+        "    # repredict_ind = np.unique(np.concatenate([ind1, ind2]))\n",
+        "    repredict_ind = np.where(np.max(pred_probs, axis=1) < threshold)[0]\n",
         "    return repredict_ind\n",
         "\n",
         "def train_ensem_model(clf1, clf2, X_train, y_train):\n",
@@ -4021,19 +4039,44 @@
         "\n",
         "def eval_ensem_model(clf1, clf2, X_val, y_val, threshold=0.6):\n",
         "    pred_probs = clf1.predict_proba(X_val)\n",
-        "    repredict_ind = get_repred_ind(clf1, X_val, y_val)\n",
+        "    repredict_ind = get_repred_ind(clf1, X_val)\n",
         "    repredict_preds = clf2.predict(X_val[repredict_ind])\n",
         "    preds = clf1.predict(X_val)\n",
         "    preds[repredict_ind] = repredict_preds\n",
         "    acc = accuracy_score(y_val, preds)\n",
-        "    print(\"Validation acc:\", acc)\n",
         "    return preds, acc\n"
       ],
       "metadata": {
         "id": "6bZdXKGnqu4A"
       },
-      "execution_count": 119,
+      "execution_count": 200,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.unique(np.concatenate([np.where(np.max(pred_probs, axis=1) - np.min(pred_probs, axis=1) < 0.6)[0], np.where(np.max(pred_probs, axis=1) < 0.7)[0]])).shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ENoFi0BLERcU",
+        "outputId": "1245cf39-fddd-4ba1-854b-0b54063d2e09"
+      },
+      "execution_count": 193,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(292,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 193
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4065,6 +4108,7 @@
         "    print(\"clf1:\", clf1)\n",
         "    print(\"clf2:\", clf2)\n",
         "    preds, acc = eval_ensem_model(clf1, clf2, X_val_feature, y_val)\n",
+        "    print(\"val acc:\", acc)\n",
         "    print()\n",
         "    if acc > max_val_acc:\n",
         "        max_val_acc = acc\n",
@@ -4076,9 +4120,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3IGtj-2axpbG",
-        "outputId": "272960d4-1e82-4d83-d793-4b64beb7a5b3"
+        "outputId": "7bf050c1-7e5a-4b93-c298-ea8a0a44a129"
       },
-      "execution_count": 120,
+      "execution_count": 201,
       "outputs": [
         {
           "output_type": "stream",
@@ -4086,11 +4130,11 @@
           "text": [
             "clf1: MultinomialNB(alpha=0.07811930460001588)\n",
             "clf2: MultinomialNB(alpha=0.07811930460001588)\n",
-            "Validation acc: 0.9452754469171835\n",
+            "val acc: 0.85187887632251\n",
             "\n",
             "clf1: MultinomialNB(alpha=0.07811930460001588)\n",
             "clf2: LinearSVC(C=0.8560958573054762, intercept_scaling=9.231320985461904)\n",
-            "Validation acc: 0.9456402772710689\n",
+            "val acc: 0.8507843852608536\n",
             "\n"
           ]
         },
@@ -4108,19 +4152,19 @@
           "text": [
             "clf1: MultinomialNB(alpha=0.07811930460001588)\n",
             "clf2: LogisticRegression(C=0.99389298832784, max_iter=997)\n",
-            "Validation acc: 0.9346953666545057\n",
+            "val acc: 0.8511492156147391\n",
             "\n",
             "clf1: MultinomialNB(alpha=0.07811930460001588)\n",
             "clf2: RandomForestClassifier(max_depth=100, min_samples_split=12, n_estimators=22)\n",
-            "Validation acc: 0.9387085005472455\n",
+            "val acc: 0.8511492156147391\n",
             "\n",
             "clf1: MultinomialNB(alpha=0.07811930460001588)\n",
             "clf2: KNeighborsClassifier(leaf_size=82, n_neighbors=10)\n",
-            "Validation acc: 0.9463699379788398\n",
+            "val acc: 0.85187887632251\n",
             "\n",
             "clf1: LogisticRegression(C=0.99389298832784, max_iter=997)\n",
             "clf2: MultinomialNB(alpha=0.07811930460001588)\n",
-            "Validation acc: 0.9730025538124772\n",
+            "val acc: 0.8686610726012404\n",
             "\n"
           ]
         },
@@ -4138,23 +4182,23 @@
           "text": [
             "clf1: LogisticRegression(C=0.99389298832784, max_iter=997)\n",
             "clf2: LinearSVC(C=0.8560958573054762, intercept_scaling=9.231320985461904)\n",
-            "Validation acc: 0.9726377234585918\n",
+            "val acc: 0.8679314118934696\n",
             "\n",
             "clf1: LogisticRegression(C=0.99389298832784, max_iter=997)\n",
             "clf2: LogisticRegression(C=0.99389298832784, max_iter=997)\n",
-            "Validation acc: 0.9620576431959139\n",
+            "val acc: 0.8668369208318132\n",
             "\n",
             "clf1: LogisticRegression(C=0.99389298832784, max_iter=997)\n",
             "clf2: RandomForestClassifier(max_depth=100, min_samples_split=12, n_estimators=22)\n",
-            "Validation acc: 0.9591390003648304\n",
+            "val acc: 0.8661072601240423\n",
             "\n",
             "clf1: LogisticRegression(C=0.99389298832784, max_iter=997)\n",
             "clf2: KNeighborsClassifier(leaf_size=82, n_neighbors=10)\n",
-            "Validation acc: 0.9700839109813937\n",
+            "val acc: 0.8668369208318132\n",
             "\n",
             "clf1: RandomForestClassifier(max_depth=100, min_samples_split=12, n_estimators=22)\n",
             "clf2: MultinomialNB(alpha=0.07811930460001588)\n",
-            "Validation acc: 0.9799343305363006\n",
+            "val acc: 0.848595403137541\n",
             "\n"
           ]
         },
@@ -4172,23 +4216,23 @@
           "text": [
             "clf1: RandomForestClassifier(max_depth=100, min_samples_split=12, n_estimators=22)\n",
             "clf2: LinearSVC(C=0.8560958573054762, intercept_scaling=9.231320985461904)\n",
-            "Validation acc: 0.9784750091207588\n",
+            "val acc: 0.8526085370302809\n",
             "\n",
             "clf1: RandomForestClassifier(max_depth=100, min_samples_split=12, n_estimators=22)\n",
             "clf2: LogisticRegression(C=0.99389298832784, max_iter=997)\n",
-            "Validation acc: 0.9722728931047063\n",
+            "val acc: 0.8504195549069683\n",
             "\n",
             "clf1: RandomForestClassifier(max_depth=100, min_samples_split=12, n_estimators=22)\n",
             "clf2: RandomForestClassifier(max_depth=100, min_samples_split=12, n_estimators=22)\n",
-            "Validation acc: 0.9627873039036848\n",
+            "val acc: 0.8504195549069683\n",
             "\n",
             "clf1: RandomForestClassifier(max_depth=100, min_samples_split=12, n_estimators=22)\n",
             "clf2: KNeighborsClassifier(leaf_size=82, n_neighbors=10)\n",
-            "Validation acc: 0.9759211966435607\n",
+            "val acc: 0.8504195549069683\n",
             "\n",
             "clf1: KNeighborsClassifier(leaf_size=82, n_neighbors=10)\n",
             "clf2: MultinomialNB(alpha=0.07811930460001588)\n",
-            "Validation acc: 0.9824881430134987\n",
+            "val acc: 0.8558920102152499\n",
             "\n"
           ]
         },
@@ -4206,19 +4250,19 @@
           "text": [
             "clf1: KNeighborsClassifier(leaf_size=82, n_neighbors=10)\n",
             "clf2: LinearSVC(C=0.8560958573054762, intercept_scaling=9.231320985461904)\n",
-            "Validation acc: 0.9813936519518424\n",
+            "val acc: 0.8555271798613645\n",
             "\n",
             "clf1: KNeighborsClassifier(leaf_size=82, n_neighbors=10)\n",
             "clf2: LogisticRegression(C=0.99389298832784, max_iter=997)\n",
-            "Validation acc: 0.9715432323969354\n",
+            "val acc: 0.85187887632251\n",
             "\n",
             "clf1: KNeighborsClassifier(leaf_size=82, n_neighbors=10)\n",
             "clf2: RandomForestClassifier(max_depth=100, min_samples_split=12, n_estimators=22)\n",
-            "Validation acc: 0.967894928858081\n",
+            "val acc: 0.8547975191535936\n",
             "\n",
             "clf1: KNeighborsClassifier(leaf_size=82, n_neighbors=10)\n",
             "clf2: KNeighborsClassifier(leaf_size=82, n_neighbors=10)\n",
-            "Validation acc: 0.9788398394746443\n",
+            "val acc: 0.8555271798613645\n",
             "\n"
           ]
         }
@@ -4232,32 +4276,150 @@
         "print(\"clf2:\", best_clf2)\n",
         "print(\"val acc:\", max_val_acc)\n",
         "\n",
-        "y_test = y_test[~X_test.isnull()]\n",
-        "X_test = X_test[~X_test.isnull()]\n",
-        "X_test_count = vectorizer.transform(X_test)\n",
-        "X_test_feature = transformer.transform(X_test_count)\n",
-        "preds, acc = eval_ensem_model(best_clf1, best_clf2, X_test_feature, y_test)\n",
-        "print(\"test acc:\", acc)"
+        "# y_test = y_test[~X_test.isnull()]\n",
+        "# X_test = X_test[~X_test.isnull()]\n",
+        "# X_test_count = vectorizer.transform(X_test)\n",
+        "# X_test_feature = transformer.transform(X_test_count)\n",
+        "# preds, acc = eval_ensem_model(best_clf1, best_clf2, X_test_feature, y_test)\n",
+        "# print(\"test acc:\", acc)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4l97XZLS0ufQ",
-        "outputId": "d13b2dcc-d856-4162-ce68-6e947851fab3"
+        "outputId": "75bb1307-f345-4eaa-e8b2-e07ea935446f"
       },
-      "execution_count": 124,
+      "execution_count": 202,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Best ensemble model:\n",
-            "clf1: KNeighborsClassifier(leaf_size=82, n_neighbors=10)\n",
+            "clf1: LogisticRegression(C=0.99389298832784, max_iter=997)\n",
             "clf2: MultinomialNB(alpha=0.07811930460001588)\n",
-            "val acc: 0.9824881430134987\n",
-            "Validation acc: 0.9802919708029197\n",
-            "test acc: 0.9802919708029197\n"
+            "val acc: 0.8686610726012404\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### idea 2"
+      ],
+      "metadata": {
+        "id": "0UKnkOGg_P3R"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "clfs = []\n",
+        "for clf in first:\n",
+        "    clf = clf(**best_params_dct[str(clf)])\n",
+        "    clf.fit(X_train_feature, y_train)\n",
+        "    clfs.append(clf)\n",
+        "\n",
+        "preds_probs = []\n",
+        "for clf in clfs:\n",
+        "    preds_probs.append(clf.predict_proba(X_val_feature))\n",
+        "\n",
+        "summed_preds_probs = preds_probs[0]\n",
+        "for pred in preds_probs[1:]:\n",
+        "    summed_preds_probs += pred\n",
+        "\n",
+        "preds = np.argmax(summed_preds_probs, axis=1)\n",
+        "accuracy_score(y_val, preds)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b7ifJlSf9vH1",
+        "outputId": "900b654e-64e9-4c49-ad01-c8667fdd00c3"
+      },
+      "execution_count": 151,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8537030280919372"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 151
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### idea 3"
+      ],
+      "metadata": {
+        "id": "BUsZI3CdBjCb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# from sklearn.linear_model import LinearRegression\n",
+        "\n",
+        "train_probs = []\n",
+        "for clf in clfs:\n",
+        "    train_probs.append(clf.predict_proba(X_train_feature))\n",
+        "train_probs_collated = np.concatenate(train_probs, axis=1)"
+      ],
+      "metadata": {
+        "id": "xTON46fk_eTN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for clf in second:\n",
+        "    final = clf()\n",
+        "    final.fit(train_probs_collated, y_train)\n",
+        "\n",
+        "    preds_probs_collated = np.concatenate(preds_probs, axis=1)\n",
+        "    preds = final.predict(preds_probs_collated)\n",
+        "    print(clf)\n",
+        "    print(accuracy_score(y_val, preds))\n",
+        "    print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_3MHJxMpBPwU",
+        "outputId": "4320e48f-8cf1-4a1b-8f0b-5783cde65c92"
+      },
+      "execution_count": 167,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'sklearn.naive_bayes.MultinomialNB'>\n",
+            "0.8686610726012404\n",
+            "\n",
+            "<class 'sklearn.svm._classes.LinearSVC'>\n",
+            "0.8712148850784385\n",
+            "\n",
+            "<class 'sklearn.linear_model._logistic.LogisticRegression'>\n",
+            "0.8693907333090113\n",
+            "\n",
+            "<class 'sklearn.ensemble._forest.RandomForestClassifier'>\n",
+            "0.8445822692448012\n",
+            "\n",
+            "<class 'sklearn.neighbors._classification.KNeighborsClassifier'>\n",
+            "0.8690259029551258\n",
+            "\n"
           ]
         }
       ]
