--- a/Data_Preprocessing.ipynb
+++ b/Data_Preprocessing.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +27,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 38
+          "height": 108
         },
         "id": "weGsF80nJkMs",
-        "outputId": "30289b37-215a-4e48-acc7-32853d8fef12"
+        "outputId": "e039efdc-d6ca-416f-dcab-a01de3a0ed67"
       },
       "outputs": [
         {
@@ -46,9 +45,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-141fa15b-587a-4bf5-9fa0-a56a21fd2bcd\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-d30888d1-b3b6-464e-a7d2-f9371db0b3d0\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-141fa15b-587a-4bf5-9fa0-a56a21fd2bcd\">\n",
+              "     <output id=\"result-d30888d1-b3b6-464e-a7d2-f9371db0b3d0\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -231,6 +230,14 @@
             ]
           },
           "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saving sent_valid.csv to sent_valid (1).csv\n",
+            "Saving sent_train.csv to sent_train (1).csv\n"
+          ]
         }
       ],
       "source": [
@@ -269,16 +276,35 @@
         "df_2 = pd.concat([test_2, train_2], ignore_index=True)\n",
         "\n",
         "#rename the values in df_2['label'] to 0: Negative, 1: Positive , 2: Neutral\n",
-        "df_2.loc[df_2['label'] == 1, 'label'] = 2\n",
-        "df_2.loc[df_2['label'] == 2, 'label'] = 1\n",
-        "df_2 = df_2.rename(columns={'text':'title', 'label':'labels'})\n",
+        "# df_2.loc[df_2['label'] == 1, 'label'] = 2\n",
+        "# df_2.loc[df_2['label'] == 2, 'label'] = 1\n",
+        "# df_2 = df_2.rename(columns={'text':'title', 'label':'labels'})\n",
+        "# #df_2 concat with df\n",
+        "# data = pd.concat([df[['title', 'labels']], df_2[['title', 'labels']]], ignore_index=True)\n",
+        "\n",
+        "\n",
+        "#rename the values in df_2['label'] to 0: Negative, 1: Positive , 2: Neutral\n",
+        "new_df_2 = pd.DataFrame()\n",
+        "df_2_sentiment0 = df_2.loc[df_2['label']==0]\n",
+        "\n",
+        "#rename the values in df_2['label'] = 1 to 2\n",
+        "df_2_sentiment1 = df_2.loc[df_2['label']==1]\n",
+        "df_2_sentiment1.loc[df_2_sentiment1['label'] == 1, 'label'] = 2\n",
+        "\n",
+        "#rename the values in df_2['label'] = 2 to 1\n",
+        "df_2_sentiment2 = df_2.loc[df_2['label']==2]\n",
+        "df_2_sentiment2.loc[df_2_sentiment2['label'] == 2, 'label'] = 1\n",
+        "\n",
+        "new_df_2 = pd.concat([df_2_sentiment0, df_2_sentiment1, df_2_sentiment2],ignore_index=True)\n",
+        "new_df_2 = new_df_2.rename(columns={'text':'title', 'label':'labels'})\n",
+        "\n",
         "#df_2 concat with df\n",
-        "data = pd.concat([df[['title', 'labels']], df_2[['title', 'labels']]], ignore_index=True)"
+        "data = pd.concat([df[['title', 'labels']], new_df_2[['title', 'labels']]], ignore_index=True)"
       ],
       "metadata": {
         "id": "j0kdOLlUm-UD"
       },
-      "execution_count": 3,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -290,7 +316,7 @@
       "metadata": {
         "id": "m5mQjx9UXqXU"
       },
-      "execution_count": 4,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -304,7 +330,7 @@
       "metadata": {
         "id": "ipe3yiCzYRba"
       },
-      "execution_count": 5,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -317,7 +343,7 @@
       "metadata": {
         "id": "KXQr-iB5ZTGq"
       },
-      "execution_count": 6,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -330,11 +356,11 @@
         "id": "IfQBkVMJazqg",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 423
         },
-        "outputId": "397b8f9e-963c-4c27-de15-04dd636cd506"
+        "outputId": "e37af472-3472-4144-b5c9-3d3268142617"
       },
-      "execution_count": 7,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -357,7 +383,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d61325f0-4851-40a0-8064-60368a161e2d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-791c3d2c-f27a-49e2-80d0-4a9cd8ad4a31\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -443,7 +469,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d61325f0-4851-40a0-8064-60368a161e2d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-791c3d2c-f27a-49e2-80d0-4a9cd8ad4a31')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -495,12 +521,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d61325f0-4851-40a0-8064-60368a161e2d button.colab-df-convert');\n",
+              "        document.querySelector('#df-791c3d2c-f27a-49e2-80d0-4a9cd8ad4a31 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d61325f0-4851-40a0-8064-60368a161e2d');\n",
+              "        const element = document.querySelector('#df-791c3d2c-f27a-49e2-80d0-4a9cd8ad4a31');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -520,8 +546,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-0284d841-20a3-4add-9a18-8f729a267176\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0284d841-20a3-4add-9a18-8f729a267176')\"\n",
+              "<div id=\"df-6e797bc4-615a-4d80-8995-2647af5442f4\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6e797bc4-615a-4d80-8995-2647af5442f4')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -640,7 +666,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-0284d841-20a3-4add-9a18-8f729a267176 button');\n",
+              "        document.querySelector('#df-6e797bc4-615a-4d80-8995-2647af5442f4 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -651,7 +677,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 47
         }
       ]
     },
@@ -663,7 +689,7 @@
       "metadata": {
         "id": "S0LtbYzRfnrg"
       },
-      "execution_count": 8,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -672,7 +698,7 @@
       "metadata": {
         "id": "XPrn2zqaeDkS"
       },
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": []
     }
   ]
