Updated to remove NaN rows

--- a/Data_Preprocessing.ipynb
+++ b/Data_Preprocessing.ipynb
@@ -27,14 +27,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 108
         },
         "id": "weGsF80nJkMs",
-        "outputId": "e039efdc-d6ca-416f-dcab-a01de3a0ed67"
+        "outputId": "cb6cf9e6-0922-451f-8f5b-5bf76cb4a51b"
       },
       "outputs": [
         {
@@ -45,9 +45,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-d30888d1-b3b6-464e-a7d2-f9371db0b3d0\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-a6378c12-708c-4622-b494-f6a554d2dafb\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-d30888d1-b3b6-464e-a7d2-f9371db0b3d0\">\n",
+              "     <output id=\"result-a6378c12-708c-4622-b494-f6a554d2dafb\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -235,8 +235,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving sent_valid.csv to sent_valid (1).csv\n",
-            "Saving sent_train.csv to sent_train (1).csv\n"
+            "Saving train-00000-of-00001-f6c9e78174b9882e.parquet to train-00000-of-00001-f6c9e78174b9882e.parquet\n",
+            "Saving test-00000-of-00001-f8c02546a74f96bb.parquet to test-00000-of-00001-f8c02546a74f96bb.parquet\n"
           ]
         }
       ],
@@ -304,7 +304,7 @@
       "metadata": {
         "id": "j0kdOLlUm-UD"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -316,7 +316,7 @@
       "metadata": {
         "id": "m5mQjx9UXqXU"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -330,7 +330,7 @@
       "metadata": {
         "id": "ipe3yiCzYRba"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -343,7 +343,7 @@
       "metadata": {
         "id": "KXQr-iB5ZTGq"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -358,9 +358,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 423
         },
-        "outputId": "e37af472-3472-4144-b5c9-3d3268142617"
+        "outputId": "9a908b6b-b70b-4c26-bad7-2b3bd3f911d2"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,7 +383,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-791c3d2c-f27a-49e2-80d0-4a9cd8ad4a31\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-38c5079d-c20b-458a-80b7-766c20262bf9\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -469,7 +469,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-791c3d2c-f27a-49e2-80d0-4a9cd8ad4a31')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-38c5079d-c20b-458a-80b7-766c20262bf9')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -521,12 +521,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-791c3d2c-f27a-49e2-80d0-4a9cd8ad4a31 button.colab-df-convert');\n",
+              "        document.querySelector('#df-38c5079d-c20b-458a-80b7-766c20262bf9 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-791c3d2c-f27a-49e2-80d0-4a9cd8ad4a31');\n",
+              "        const element = document.querySelector('#df-38c5079d-c20b-458a-80b7-766c20262bf9');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -546,9 +546,9 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-6e797bc4-615a-4d80-8995-2647af5442f4\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6e797bc4-615a-4d80-8995-2647af5442f4')\"\n",
-              "            title=\"Suggest charts.\"\n",
+              "<div id=\"df-2012395b-a808-442f-9b75-cf8c3b0bbe2c\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2012395b-a808-442f-9b75-cf8c3b0bbe2c')\"\n",
+              "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
               "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
@@ -666,7 +666,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-6e797bc4-615a-4d80-8995-2647af5442f4 button');\n",
+              "        document.querySelector('#df-2012395b-a808-442f-9b75-cf8c3b0bbe2c button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -677,29 +677,148 @@
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 8
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# data.to_csv('data.csv')"
+        "import nltk\n",
+        "from nltk.corpus import words\n",
+        "\n",
+        "nltk.download(\"words\")\n",
+        "nltk.download('punkt')"
       ],
       "metadata": {
-        "id": "S0LtbYzRfnrg"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gsrpiCeA-gxa",
+        "outputId": "8eb70a29-8448-43b4-f063-24ce2267a5d2"
       },
-      "execution_count": 49,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package words to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping corpora/words.zip.\n",
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Download the English words corpus\n",
+        "nltk.download(\"words\")\n",
+        "\n",
+        "# Create a function to check if a word is in the English vocabulary\n",
+        "english_vocab = set(w.lower() for w in words.words())\n",
+        "\n",
+        "def is_english_word(word):\n",
+        "    return word.lower() in english_vocab\n",
+        "\n",
+        "# Create a function to remove non-English words from a text\n",
+        "def remove_words_with_non_english_characters(text):\n",
+        "    if isinstance(text, str):\n",
+        "        words = text.split()  # Split the text into words for strings\n",
+        "        cleaned_words = []\n",
+        "        for word in words:\n",
+        "            if all(char.isalpha() and ord(char) < 128 for char in word):\n",
+        "                cleaned_words.append(word)\n",
+        "            else:\n",
+        "                cleaned_words.append(word)  # Retain symbols and punctuation\n",
+        "        cleaned_text = ' '.join(cleaned_words)\n",
+        "        return cleaned_text\n",
+        "    else:\n",
+        "        return text\n",
+        "\n",
+        "\n",
+        "new_data = data.copy()\n",
+        "new_data[\"title\"] = new_data[\"title\"].apply(remove_words_with_non_english_characters)\n",
+        "\n",
+        "# df[\"text\"] now contains text with non-English words removed, while other columns remain intact\n",
+        "print(new_data)"
+      ],
       "metadata": {
-        "id": "XPrn2zqaeDkS"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3tATmTKEAz9p",
+        "outputId": "6f367fdd-ddc8-4599-df2c-b8ba77b02c6e"
       },
-      "execution_count": 48,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package words to /root/nltk_data...\n",
+            "[nltk_data]   Package words is already up-to-date!\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                                                   title  labels\n",
+            "0      Gildan Activewear Reports Strong Results for t...       2\n",
+            "1      TRILLION ENERGY ANNOUNCES FLOW TEST RESULTS FO...       2\n",
+            "2                 CAPREIT Announces October Distribution       1\n",
+            "3      Unigold Inc Delivers Positive Feasibility Stud...       2\n",
+            "4      Wallbridge Provides Update on Archer Explorati...       1\n",
+            "...                                                  ...     ...\n",
+            "13705  Stocks making the biggest moves midday TD Amer...       1\n",
+            "13706  Stocks making the biggest moves premarket Fitb...       1\n",
+            "13707  Stocks making the biggest moves premarket Home...       1\n",
+            "13708  Stocks making the biggest moves premarket TD A...       1\n",
+            "13709           TCO NNVC GPOR and JE among midday movers       1\n",
+            "\n",
+            "[13710 rows x 2 columns]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(len(new_data))\n",
+        "new_data.replace(\"\", float(\"NaN\"), inplace=True)\n",
+        "cleaned_data = new_data.dropna()\n",
+        "cleaned_data.to_csv('cleaned_data.csv')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iM-2i_-wC27d",
+        "outputId": "ed924826-8deb-4fca-becf-bb0123256e9b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "13710\n"
+          ]
+        }
+      ]
     }
   ]
 }
