--- a/Data_Preprocessing.ipynb
+++ b/Data_Preprocessing.ipynb
@@ -819,6 +819,69 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Lemmatization"
+      ],
+      "metadata": {
+        "id": "Wyx-7HoNshzn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import nltk\n",
+        "from nltk.stem import WordNetLemmatizer\n",
+        "from nltk.tokenize import word_tokenize\n",
+        "nltk.download('punkt')\n",
+        "nltk.download('wordnet')"
+      ],
+      "metadata": {
+        "id": "QmQDVVKqsjlL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Thought process:\n",
+        "Although lemmatization can be considered expensive to use as it has a significantly more expensive computational requirement than stemming, our team felt that lemmatization is better because it actually uses english words where stemming can lead to non-complete english words."
+      ],
+      "metadata": {
+        "id": "avMG3uWputJ3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lemmatizer = WordNetLemmatizer()\n",
+        "\n",
+        "def lemmatize_sentence(text):\n",
+        "    # Tokenize the sentence into words\n",
+        "    words = word_tokenize(text)\n",
+        "    lemmatized_words = [lemmatizer.lemmatize(word.lower()) for word in words]\n",
+        "    lemmatized_sentence = ' '.join(lemmatized_words)\n",
+        "    return lemmatized_sentence\n",
+        "\n",
+        "def lemmatize_dataset(sentences):\n",
+        "    # We lemmatize the entire sentence into our 'title' column.\n",
+        "    lemmatized = []\n",
+        "    for sentence in sentences:\n",
+        "        lemmatized.append(lemmatize_sentence(sentence))\n",
+        "    return lemmatized\n",
+        "\n",
+        "data[\"title\"] = pd.Series(lemmatize_dataset(data[\"title\"]))\n",
+        "\n",
+        "data.head()"
+      ],
+      "metadata": {
+        "id": "pV-AHxrktV5a"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
