Added documentation to lemmatization

--- a/Data_Preprocessing.ipynb
+++ b/Data_Preprocessing.ipynb
@@ -848,7 +848,7 @@
       "cell_type": "markdown",
       "source": [
         "### Thought process:\n",
-        "Although lemmatization can be considered expensive to use as it has a significantly more expensive computational requirement than stemming, our team felt that lemmatization is better because it actually uses english words where stemming can lead to non-complete english words."
+        "While lemmatization is considered computationally more expensive than stemming due to its reliance on a linguistic database, our team believes that lemmatization is superior because it yields complete English words, whereas stemming can result in incomplete or non-English words."
       ],
       "metadata": {
         "id": "avMG3uWputJ3"
@@ -857,25 +857,60 @@
     {
       "cell_type": "code",
       "source": [
+        "# Import necessary libraries\n",
+        "from nltk.tokenize import word_tokenize\n",
+        "from nltk.stem import WordNetLemmatizer\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Create a WordNetLemmatizer object for lemmatization\n",
         "lemmatizer = WordNetLemmatizer()\n",
         "\n",
         "def lemmatize_sentence(text):\n",
+        "    \"\"\"\n",
+        "    Lemmatizes a given text by tokenizing it into words,\n",
+        "    lemmatizing each word, and then rejoining them into a sentence.\n",
+        "\n",
+        "    Parameters:\n",
+        "    - text (str): The input text to be lemmatized.\n",
+        "\n",
+        "    Returns:\n",
+        "    - str: The lemmatized sentence.\n",
+        "    \"\"\"\n",
         "    # Tokenize the sentence into words\n",
         "    words = word_tokenize(text)\n",
+        "\n",
+        "    # Lemmatize each word and convert to lowercase\n",
         "    lemmatized_words = [lemmatizer.lemmatize(word.lower()) for word in words]\n",
+        "\n",
+        "    # Join the lemmatized words back into a sentence\n",
         "    lemmatized_sentence = ' '.join(lemmatized_words)\n",
+        "\n",
         "    return lemmatized_sentence\n",
         "\n",
         "def lemmatize_dataset(sentences):\n",
-        "    # We lemmatize the entire sentence into our 'title' column.\n",
+        "    \"\"\"\n",
+        "    Lemmatizes an entire dataset of sentences using the lemmatize_sentence function.\n",
+        "\n",
+        "    Parameters:\n",
+        "    - sentences (pd.Series): A Pandas Series containing the sentences to be lemmatized.\n",
+        "\n",
+        "    Returns:\n",
+        "    - list: A list of lemmatized sentences.\n",
+        "    \"\"\"\n",
+        "    # Initialize an empty list to store lemmatized sentences\n",
         "    lemmatized = []\n",
+        "\n",
+        "    # Iterate through each sentence in the dataset\n",
         "    for sentence in sentences:\n",
+        "        # Lemmatize the current sentence and append to the list\n",
         "        lemmatized.append(lemmatize_sentence(sentence))\n",
+        "\n",
         "    return lemmatized\n",
         "\n",
+        "# Lemmatize the 'title' column in the 'data' DataFrame\n",
         "data[\"title\"] = pd.Series(lemmatize_dataset(data[\"title\"]))\n",
         "\n",
-        "data.head()"
+        "data.head()\n"
       ],
       "metadata": {
         "id": "pV-AHxrktV5a"
