Edited documentation for Lemmatization

--- a/Data_Preprocessing.ipynb
+++ b/Data_Preprocessing.ipynb
@@ -874,7 +874,7 @@
         "    - text (str): The input text to be lemmatized.\n",
         "\n",
         "    Returns:\n",
-        "    - str: The lemmatized sentence.\n",
+        "    - lemmatized_sentence (str): The lemmatized sentence.\n",
         "    \"\"\"\n",
         "    # Tokenize the sentence into words\n",
         "    words = word_tokenize(text)\n",
@@ -895,7 +895,7 @@
         "    - sentences (pd.Series): A Pandas Series containing the sentences to be lemmatized.\n",
         "\n",
         "    Returns:\n",
-        "    - list: A list of lemmatized sentences.\n",
+        "    - lemmatized (list) : A list of lemmatized sentences.\n",
         "    \"\"\"\n",
         "    # Initialize an empty list to store lemmatized sentences\n",
         "    lemmatized = []\n",
